--- a/src/components/calculator.module.css
+++ b/src/components/calculator.module.css
@@ -9,6 +9,12 @@
     font-size: 2.5rem;
 }
 
+.calculator .buttonContainer {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+}
+
 .calculator button {
     width: 4rem;
     font-size: 2.5rem;
@@ -20,3 +26,21 @@
     border-radius: 1px;
 }
 
+.equal {
+    grid-column-start: 4;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 6;
+    background-color: blue;
+}
+
+.calculator {
+    width: 30vh;
+    height: 60vh;
+    display: flex;
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 5px;
+    margin: auto;
+    align-items: center;
+}
